--- a/index.html
+++ b/index.html
@@ -5,8 +5,247 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NetBill - The Ultimate ISP Billing Solution</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-    <link rel="stylesheet" href="styles.css">
     <script src="../static/js/particles.min.js"></script>
+    <style>
+        body {
+            margin: 0;
+            font-family: Arial, sans-serif;
+            background-color:rgb(22, 32, 146); /* Light blue background */
+            color: #333;
+        }
+
+        header {
+            background: #00aaff; /* Light blue header */
+            color: white;
+            padding: 10px 0;
+        }
+
+        header .container {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 0 20px;
+        }
+
+        header .logo {
+            font-size: 24px;
+        }
+
+        header nav ul {
+            list-style: none;
+            margin: 0;
+            padding: 0;
+            display: flex;
+        }
+
+        header nav ul li {
+            margin-left: 20px;
+        }
+
+        header nav ul li a {
+            color: white;
+            text-decoration: none;
+        }
+
+        header .dropdown {
+            display: none;
+        }
+
+        header .dropbtn {
+            background: none;
+            border: none;
+            color: white;
+            font-size: 24px;
+            cursor: pointer;
+        }
+
+        header .dropdown-content {
+            display: none;
+            position: absolute;
+            top: 50px;
+            right: 20px;
+            background-color: #00aaff;
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+            z-index: 1;
+            border-radius: 10px;
+        }
+
+        header .dropdown-content a {
+            color: white;
+            padding: 12px 16px;
+            text-decoration: none;
+            display: block;
+            border-bottom: 1px solid #007BFF;
+        }
+
+        header .dropdown-content a:last-child {
+            border-bottom: none;
+        }
+
+        header .dropdown-content a:hover {
+            background-color: #007BFF;
+        }
+
+        .show {
+            display: block;
+        }
+
+        .hero {
+            position: relative;
+            color: #fff;
+            text-align: center;
+            padding: 100px 20px;
+            overflow: hidden;
+        }
+
+        #particles-js {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            top: 0;
+            left: 0;
+            z-index: -1;
+        }
+
+        .hero h1.main-title {
+            font-size: 48px;
+            margin: 0 0 20px;
+            color: #fff;
+        }
+
+        .hero p.sub-title {
+            font-size: 24px;
+            margin: 0 0 20px;
+            color: #fff;
+        }
+
+        .hero .btn {
+            background: #007BFF; /* Blue buttons */
+            color: white;
+            padding: 10px 20px;
+            text-decoration: none;
+            margin: 10px;
+        }
+
+        section {
+            padding: 60px 20px;
+        }
+
+        section h2 {
+            text-align: center;
+            margin-bottom: 40px;
+            color: #00aaff; /* Light blue text */
+        }
+
+        .features .features-grid,
+        .pricing .pricing-grid,
+        .testimonials .testimonials-grid,
+        .benefits .benefits-grid,
+        .onboarding .onboarding-grid {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 20px;
+            justify-content: center;
+        }
+
+        .features .feature,
+        .pricing .pricing-plan,
+        .testimonials .testimonial,
+        .benefits .benefit,
+        .onboarding .onboarding-card {
+            background: white;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            text-align: center;
+            flex: 1 1 calc(33.333% - 20px);
+            max-width: calc(33.333% - 20px);
+        }
+
+        .features .feature i,
+        .benefits .benefit i {
+            font-size: 48px;
+            color: #007BFF; /* Blue icons */
+            margin-bottom: 20px;
+        }
+
+        .pricing .pricing-plan h3,
+        .onboarding .onboarding-card h3 {
+            margin: 0 0 10px;
+            color: #00aaff; /* Light blue headings */
+        }
+
+        .pricing .pricing-plan ul,
+        .onboarding .onboarding-card ul {
+            list-style: none;
+            padding: 0;
+            margin: 0 0 20px;
+        }
+
+        .pricing .pricing-plan ul li,
+        .onboarding .onboarding-card ul li {
+            margin-bottom: 10px;
+        }
+
+        .pricing .pricing-plan .btn {
+            background: #007BFF; /* Blue buttons */
+            color: white;
+            padding: 10px 20px;
+            text-decoration: none;
+        }
+
+        .partners .partners-logos {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+        }
+
+        .partners .partners-logos img {
+            height: 50px;
+        }
+
+        .testimonials .testimonial p {
+            font-style: italic;
+        }
+
+        .onboarding .onboarding-card h4 {
+            margin-top: 20px;
+        }
+
+        footer {
+            background: #00aaff; /* Light blue footer */
+            color: white;
+            padding: 20px 0;
+            text-align: center;
+        }
+
+        footer a {
+            color: #007BFF; /* Blue links */
+            text-decoration: none;
+        }
+
+        /* Responsive Design */
+        @media (max-width: 768px) {
+            header nav ul {
+                display: none;
+            }
+
+            header .dropdown {
+                display: block;
+            }
+
+            .features .feature,
+            .pricing .pricing-plan,
+            .testimonials .testimonial,
+            .benefits .benefit,
+            .onboarding .onboarding-card {
+                flex: 1 1 calc(100% - 20px);
+                max-width: calc(100% - 20px);
+            }
+        }
+    </style>
 </head>
 <body>
     <header>
@@ -328,8 +567,7 @@
                 "size": 40,
                 "duration": 2,
                 "opacity": 8,
-                "speed": 3
-              },
+                             },
               "repulse": {
                 "distance": 200,
                 "duration": 0.4
@@ -346,4 +584,5 @@
         });
     </script>
 </body>
-</html>
+</html> "speed": 3
+             
