--- a/index.html
+++ b/index.html
@@ -244,6 +244,12 @@
                 flex: 1 1 calc(100% - 20px);
                 max-width: calc(100% - 20px);
             }
+
+            .hero .btn {
+                display: block;
+                margin: 10px auto;
+                width: calc(100% - 40px);
+            }
         }
     </style>
 </head>
@@ -558,9 +564,7 @@
             "modes": {
               "grab": {
                 "distance": 400,
-                "line_linked": {
-                  "opacity": 1
-                }
+                "line
               },
               "bubble": {
                 "distance": 400,
