--- a/index.html
+++ b/index.html
@@ -564,14 +564,17 @@
             "modes": {
               "grab": {
                 "distance": 400,
-                "line
+                linked": {
+                  "opacity": 1
+                }
               },
               "bubble": {
                 "distance": 400,
                 "size": 40,
                 "duration": 2,
                 "opacity": 8,
-                             },
+                "speed": 3
+              },
               "repulse": {
                 "distance": 200,
                 "duration": 0.4
@@ -588,5 +591,4 @@
         });
     </script>
 </body>
-</html> "speed": 3
-             
+</html>
