--- a/index.html
+++ b/index.html
@@ -564,7 +564,14 @@
             "modes": {
               "grab": {
                 "distance": 400,
-                linked": {
+                "line_linked": {
+                  "opacity": 1
+                }
+              },
+              "bubble": {
+                "distance": 
+                  400,
+                "line_linked": {
                   "opacity": 1
                 }
               },
